--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production PORT=8000 pm2 start server.js -i -1",
+    "start": "cross-env NODE_ENV=production PORT=80 pm2 start server.js",
     "dev": "nodemon server"
   },
   "author": "",
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "aws-sdk": "^2.812.0",
     "bcrypt": "^5.0.0",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
@@ -24,6 +25,7 @@
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
     "nunjucks": "^3.2.2",
     "passport": "^0.4.1",
